# anonymizer

./: .gitignore  .python-version  CHANGELOG.md  LICENSE  Pipfile  __version__.py  access_token.txt  anonymizer.py  anonymizer_nt.py  build.py  build_osx.sh  build_win.py  class_diagram.md  complex_eg.py  config.json  config.py  dicom_anon.py  dicom_scrub.py  help.py  index.html  patch_release.sh  project.py  pyproject.toml  radon_raw_totals.py  radon_results.txt  readme.de.md  readme.es.md  readme.fr.md  readme.md  requirements-dev.txt  segbutton_eg.py  set_gha_env.py  storage_dir.py  storage_scp.py  tkmenutest.py  translate.py  treeviewtable_eg.py  versionfile.txt  welcome.py
.github/workflows/: build.yaml  build.yml  build_exe.yaml.bak  build_win_codesign.yml.bak  release.yaml  tests.yaml  unit_test.yml
assets/: help.html  rsna_color_scheme_font.json  rsna_icon.icns
assets/Domine/: README.txt
assets/docs/: Meeting_1_28_July_2023.txt  Meeting_2_9_Aug_2023.txt
assets/html/: 1_overview.html  2_deidentification protocol.html  2_instructions.html  3_instructions.html  3_project management.html  4_license.html  4_project settings.html  5_operation.html  6_license.html  instructions.html  styles.css
assets/images/: rsna_icon.icns
assets/scripts/: default-anonymizer.script
assets/themes/: rsna_color_scheme_font.json  rsna_theme.json
build_exe_scripts/: build_osx.sh  build_win.py
controller/: anonymize.py  anonymizer.py  dicom_C_codes.py  dicom_QR_find_scu.py  dicom_ae.py  dicom_echo_scu.py  dicom_echo_send_scu.py  dicom_find_scu.py  dicom_move_scu copy.py  dicom_move_scu.py  dicom_move_scu_with_scp.py  dicom_return_codes.py  dicom_scp.py  dicom_send_scu.py  dicom_storage_scp.py  project.py
docs/: 1_overview.html  2_deidentification protocol.html  3_managing anonymization projects.html  4_project settings.html  5_operation.html  6_license.html  index.html  styles.css
model/: anonymizer.py  config.py  project.py
prototyping/: anonymizer.py  asyncio_ttk.py  asyncio_with_queue.py  aws_export.py  aws_export1.py  aws_export2.py  ctk_toplevel.py  customae.py  dicom_move_scu_with_scp.py  html_helloworld.py  html_instructions.py  matplotlib_3d.py  modalityLUT_smpte_test_pattern.py  new_project_dialog.py  pandastable_eg.py  parse_log.py  pynetdicom_move_scu.py  pynetdicom_scp.py  select_local_files.py  select_local_files_listbox.py  storage_scp.py  threadpooldemo.py  tkcalendar.py  tkmenutest2.py  ttkwidgets_calendar.py
src/: __version__.py  anonymizer copy.py  anonymizer.py  anonymizer_stripped.py  build copy.py  build.py  build_stripped.py  index.html  messages.pot  profile.txt  radon_raw_totals.py  set_gha_env.py
src/anonymizer/: anonymizer.py
src/controller/: X_remove_pixel_phi.py  anonymizer.py  project.py  remove_burnt_in.py  remove_facial_features.py  remove_pixel_phi.py
src/logs/: .anonymizer_state.json
src/model/: anonymizer.py  project.py
src/prototyping/: analyse_h264_dcm.py  anonymizer_stripped.py  asyncio_ttk.py  aws_export1.py  aws_export2.py  aws_import1.py  build.py  contact_sheet_gif.py  contact_sheet_scroll_frame.py  contact_sheet_tk.py  ctk_tkphotoimage_stack_resizable.py  ctksliderwithmarkers.py  dataclass_json.py  east_dnn1.py  epic_fhir_1.py  epic_fhir_2.py  epic_fhir_3.py  epic_fhir_4.py  ffmpeg_xa.py  get_series_uids.py  hapi_fhir_2.py  histogram_widget_1.py  histogram_widget_2.py  html_instructions.py  imageviewer_1_ctk.py  imageviewer_2_tk.py  kaleidoscope_no_lazyload.py  lazy_load_image_scroll_ctkSF.py  locale.py  matplotlib_3d.py  ocr1.py  ocr2_ner.py  ocr3_anon_blacked.py  ocr4_anon_rect_mask_inpaint.py  ocr5_anon_contour_mask_inpaint.py  ocr6_deid_ner_rect_mask_inpaint.py  ocr7_deid_ner_contour_mask_inpaint.py  ocr8_deid_ner_contour_mask_inpaint_grayscale_dcm.py  ocr9_deid_ner_contour_mask_inpaint_RGB_dcm.py  parse_log.py  (+15 more)
src/utils/: logging.py  modalities.py  network.py  storage.py  translate.py  ux_fields.py
src/view/: contact_sheet.py  contact_sheet_matplotlib.py  dashboard.py  export.py  html_view.py  import_files_dialog.py  import_studies_dialog.py  kaleidoscope.py  query_retrieve_import.py  welcome.py
tests/: conftest.py  dcm_tst_files.py  dicom_pacs_simulator_scp.py  dicom_test_nodes.py  helpers.py  test_anonymize.py  test_dicom_QR_find_scu.py  test_dicom_QR_scu.py  test_dicom_storage_scp.py
tests/controller/: conftest.py  create_synthetic_ct_series.py  dcm_tst_files.py  dicom_pacs_simulator_scp.py  dicom_test_files.py  dicom_test_nodes.py  (+22 more)
utils/: config.py  logging.py  modalities.py  network.py  storage.py  textbox_loghandler.py  translate.py  ux_fields.py  ux_verify.py
view/: aws_cognito_dialog.py  dashboard.py  dicom_node_dialog.py  export.py  help.py  html_view.py  import_files_dialog.py  import_studies_dialog.py  logging_levels_dialog.py  modalites_dialog.py  network_timeouts_dialog.py  new_open_project.py  progress_dialog.py  query_retrieve_import.py  query_retrieve_scp.py  query_scp.py  select_local_files.py  select_local_files_listbox.py  settings_dialog.py  sop_classes_dialog.py  storage_dir.py  storage_scp.py  transfer_syntaxes_dialog.py  welcome.py
(+181 files in other folders)
